# regect

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  rustfmt.toml
src/: app.rs  banners.rs  body.rs  input.rs  main.rs  regex_input.rs
