[package]
name = "regect"
version = "0.2.5"
edition = "2021"
description = "A cli tool to quickly test regular expressions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/regect"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28.0"
regex = "1.10.4"
tui-textarea = "0.6.1"
