[package]
name = "regect"
version = "0.2.6"
edition = "2021"
description = "A cli tool to quickly test regular expressions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/regect"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
regex = "1.10.4"
tui-textarea = "0.7.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
