[package]
name = "regect"
version = "0.2.7"
edition = "2021"
description = "A cli tool to quickly test regular expressions"
license = "MIT"
repository = "https://github.com/kloki/regect"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.30.0"
regex = "1.10.4"
ratatui-textarea = "0.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
